// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectBox /> should render its css w/ props bgColor 1`] = `
.c0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-top: none;
  border-right: none;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  border-left: 1px solid rgba(0,0,0,0.2);
  background-color: #000;
  border-radius: 3px;
}

<div
  className="c0"
/>
`;

exports[`<SelectBox /> should render its css w/ props border 1`] = `
.c0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border: 3px dotted red;
  background-color: #1588AA;
  border-radius: 3px;
}

<div
  className="c0"
/>
`;

exports[`<SelectBox /> should render its css w/ props margin 1`] = `
.c0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 20px;
  border-top: none;
  border-right: none;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  border-left: 1px solid rgba(0,0,0,0.2);
  background-color: #1588AA;
  border-radius: 3px;
}

<div
  className="c0"
/>
`;

exports[`<SelectBox /> should render its css w/ props padding 1`] = `
.c0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 200px;
  border-top: none;
  border-right: none;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  border-left: 1px solid rgba(0,0,0,0.2);
  background-color: #1588AA;
  border-radius: 3px;
}

<div
  className="c0"
/>
`;

exports[`<SelectBox /> should render its css w/ props radius 1`] = `
.c0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-top: none;
  border-right: none;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  border-left: 1px solid rgba(0,0,0,0.2);
  background-color: #1588AA;
  border-radius: 30px;
}

<div
  className="c0"
  radius="30px"
/>
`;

exports[`<SelectBox /> should render its css w/ props theme 1`] = `
.c0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-top: none;
  border-right: none;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  border-left: 1px solid rgba(0,0,0,0.2);
  border-radius: 3px;
}

<div
  className="c0"
/>
`;

exports[`<SelectChevron /> should render its css w/ props arrowColor 1`] = `
.c0 {
  width: 28px;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
}

.c0 svg {
  fill: green;
}

<FlexBox
  arrowColor="green"
  className="c0"
/>
`;

exports[`<SelectMenu /> should render its css w/ props bgColor 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  color: rgb(255,255,255);
  border: none;
  background: none;
  padding: 0.389em 28px 0.389em 16px;
}

.c0 option {
  color: rgb(51,51,51);
}

.c0:focus {
  outline: none;
}

@media (max-width:30em) {
  .c0 {
    padding-left: 9px;
  }
}

<select
  className="c0"
/>
`;

exports[`<SelectMenu /> should render its css w/ props color 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  color: yellow;
  border: none;
  background: none;
  padding: 0.389em 28px 0.389em 16px;
}

.c0 option {
  color: rgb(51,51,51);
}

.c0:focus {
  outline: none;
}

@media (max-width:30em) {
  .c0 {
    padding-left: 9px;
  }
}

<select
  className="c0"
  color="yellow"
/>
`;

exports[`<SelectMenu /> should render its css w/ props optioncolor 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  color: rgb(255,255,255);
  border: none;
  background: none;
  padding: 0.389em 28px 0.389em 16px;
}

.c0 option {
  color: red;
}

.c0:focus {
  outline: none;
}

@media (max-width:30em) {
  .c0 {
    padding-left: 9px;
  }
}

<select
  className="c0"
/>
`;
